vlib/v/checker/tests/veb_ctx_on_fn_err.out
vlib/v/checker/tests/veb_ctx_on_fn_err.vv:50:9: error: undefined ident: `ctx`
   48 | fn serve_file(name string) veb.Result {
   49 |     content := os.read_file(name) or { panic('Error reading ${name}') }
   50 |     return ctx.html(content)
      |            ~~~
   51 | }
vlib/v/checker/tests/veb_ctx_on_fn_err.vv:50:2: error: `ctx.html(content)` used as value
   48 | fn serve_file(name string) veb.Result {
   49 |     content := os.read_file(name) or { panic('Error reading ${name}') }
   50 |     return ctx.html(content)
      |     ~~~~~~~~~~~~~~~~~~~~~~~~
   51 | }
